tests/compatibility.txt
C:\Users\noahj\Documents\Code\WarMAC\vermin.ini:2:12:error: invalid syntax: backports =
Using detected config: C:\Users\noahj\Documents\Code\WarMAC\vermin.ini
Detecting python files..
Analyzing 8 files using 8 processes..
!2, 3.7      C:\Users\noahj\Documents\Code\WarMAC\docs\source\conf.py
  '__future__' module requires 2.1, 3.0
  '__future__.annotations' member requires !2, 3.7
  'pathlib' module requires !2, 3.4

!2, 3.0      C:\Users\noahj\Documents\Code\WarMAC\tests\__init__.py
  annotations require !2, 3.0

~2, ~3       C:\Users\noahj\Documents\Code\WarMAC\vermin.ini
!2, 3.8      C:\Users\noahj\Documents\Code\WarMAC\warmac\__init__.py
  '__future__' module requires 2.1, 3.0
  '__future__.annotations' member requires !2, 3.7
  'argparse' module requires 2.3, 3.1
  'typing' module requires 2.7, 3.2
  'typing.Literal' member requires 2.7, 3.8
  annotations require !2, 3.0
  exception cause requires !2, 3.0
  print(expr) requires 2.0, 3.0

~2, ~3       C:\Users\noahj\Documents\Code\WarMAC\warmac\__main__.py
!2, 3.8      C:\Users\noahj\Documents\Code\WarMAC\warmac\warmac_average.py
  '__future__' module requires 2.1, 3.0
  '__future__.annotations' member requires !2, 3.7
  'argparse' module requires 2.3, 3.1
  'datetime' module requires 2.3, 3.0
  'datetime.datetime.fromisoformat' member requires !2, 3.7
  'datetime.timezone' member requires !2, 3.2
  'statistics' module requires 2.6, 3.4
  'statistics.geometric_mean' member requires !2, 3.8
  'statistics.harmonic_mean' member requires !2, 3.6
  'typing' module requires 2.7, 3.2
  'typing.TypedDict' member requires 2.7, 3.8
  annotations require !2, 3.0
  exception cause requires !2, 3.0
  f-strings require !2, 3.6
  keyword-only parameters require !2, 3.0
  print(expr) requires 2.0, 3.0
  raise ... from None requires !2, 3.3
  variable annotations require !2, 3.6

!2, 3.7      C:\Users\noahj\Documents\Code\WarMAC\warmac\warmac_errors.py
  '__future__' module requires 2.1, 3.0
  '__future__.annotations' member requires !2, 3.7
  'super' member requires 2.2, 3.0
  annotations require !2, 3.0
  f-strings require !2, 3.6
  super() without arguments requires !2, 3.0

!2, 3.8      C:\Users\noahj\Documents\Code\WarMAC\warmac\warmac_parser.py
  '__future__' module requires 2.1, 3.0
  '__future__.annotations' member requires !2, 3.7
  'argparse' module requires 2.3, 3.1
  'contextlib' module requires 2.5, 3.0
  'contextlib.suppress' member requires !2, 3.4
  'shutil.get_terminal_size' member requires !2, 3.3
  'super' member requires 2.2, 3.0
  'typing' module requires 2.7, 3.2
  'typing.NoReturn' member requires 2.7, 3.3
  `with` requires 2.5, 3.0
  `yield from` requires !2, 3.3
  annotations require !2, 3.0
  f-strings require !2, 3.6
  named expressions require !2, 3.8
  super() without arguments requires !2, 3.0

Minimum required versions: 3.8
Incompatible versions:     2
